WEB-17. Fixed canvas responsiveness

--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,15 @@ body {
 	background-color: white;
 }
 
-#content canvas {
+#content {
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
+	height: 100%;
+	width: 100%;
+	max-width: 568px;
 }
 
 .preloader {
